# crawler_byte

./: .gitignore  README.md  pyproject.toml
src/crawler_byte/: crawler.py  main.py
src/crawler_byte/data/cardtrader_icons/android/values/: ic_launcher_background.xml
src/crawlerugo/: crawler.py
tests/: test_crawler.py
