[project]
name = "crawler_byte"
version = "0.0.1"
authors = [
  { name="Sixtus Onumajuru", email="jigga.e10@gmail.com" },
]
description = "A python package that crawls a directory recursively and returns the file names and file stats as well as execute a custom function passed as an argument."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"